{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 294,
  "lineage": "4fd6fb42-959c-b7b0-63fc-f9b27bc190a9",
  "resources": [
    {
      "module": "module.vpc_test",
      "mode": "data",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:route-table/rtb-083bced55d56d6d58",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0ca119e0d70e50325",
                "route_table_id": "rtb-083bced55d56d6d58",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-083bced55d56d6d58",
            "owner_id": "767397962979",
            "route_table_id": "rtb-083bced55d56d6d58",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4fdbfa603e96241",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce4497cc4bc1c100"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:vpc/vpc-0ce4497cc4bc1c100",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0628af493b6adc2b4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05d4f400ecfec5dd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce4497cc4bc1c100",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083bced55d56d6d58",
            "owner_id": "767397962979"
          }
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04801d90b1b27fb5b",
            "arn": "arn:aws:ec2:us-east-1:767397962979:elastic-ip/eipalloc-04801d90b1b27fb5b",
            "domain": "vpc",
            "id": "eipalloc-04801d90b1b27fb5b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-5-244.compute-1.amazonaws.com",
            "public_ip": "34.193.5.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "expense-dev"
            },
            "tags_all": {
              "Name": "expense-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:internet-gateway/igw-08c96f3cd4b7b14d1",
            "id": "igw-08c96f3cd4b7b14d1",
            "owner_id": "767397962979",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04801d90b1b27fb5b",
            "association_id": "eipassoc-02a8126d8039e639f",
            "connectivity_type": "public",
            "id": "nat-0823f46dde59c4cb5",
            "network_interface_id": "eni-0d51753e05c1da122",
            "private_ip": "10.0.1.198",
            "public_ip": "34.193.5.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a80f01572eb7257f",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_test.aws_eip.eip",
            "module.vpc_test.aws_internet_gateway.igw",
            "module.vpc_test.aws_subnet.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b99885b92d425043854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b99885b92d42504",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09eb867312dd05ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_route_table.database",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.aws_vpc_peering_connection.peering",
            "module.vpc_test.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b99885b92d425041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0823f46dde59c4cb5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b99885b92d42504",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_eip.eip",
            "module.vpc_test.aws_internet_gateway.igw",
            "module.vpc_test.aws_nat_gateway.nat",
            "module.vpc_test.aws_route_table.database",
            "module.vpc_test.aws_subnet.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083bced55d56d6d58179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083bced55d56d6d58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09eb867312dd05ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.aws_vpc_peering_connection.peering",
            "module.vpc_test.data.aws_route_table.main",
            "module.vpc_test.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7b97fcd8b07028b3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7b97fcd8b07028b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09eb867312dd05ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_route_table.private",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.aws_vpc_peering_connection.peering",
            "module.vpc_test.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7b97fcd8b07028b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0823f46dde59c4cb5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7b97fcd8b07028b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_eip.eip",
            "module.vpc_test.aws_internet_gateway.igw",
            "module.vpc_test.aws_nat_gateway.nat",
            "module.vpc_test.aws_route_table.private",
            "module.vpc_test.aws_subnet.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05034f685b6f2ba473854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05034f685b6f2ba47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09eb867312dd05ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_route_table.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.aws_vpc_peering_connection.peering",
            "module.vpc_test.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c96f3cd4b7b14d1",
            "id": "r-rtb-05034f685b6f2ba471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05034f685b6f2ba47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_internet_gateway.igw",
            "module.vpc_test.aws_route_table.public",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:route-table/rtb-04b99885b92d42504",
            "id": "rtb-04b99885b92d42504",
            "owner_id": "767397962979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-database",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-database",
              "Project": "expense",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:route-table/rtb-0d7b97fcd8b07028b",
            "id": "rtb-0d7b97fcd8b07028b",
            "owner_id": "767397962979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-private",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-private",
              "Project": "expense",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:route-table/rtb-05034f685b6f2ba47",
            "id": "rtb-05034f685b6f2ba47",
            "owner_id": "767397962979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-public",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-public",
              "Project": "expense",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183e6ea811ce39ec",
            "route_table_id": "rtb-04b99885b92d42504",
            "subnet_id": "subnet-00232842a7c9ae0ac"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.database",
            "module.vpc_test.aws_subnet.database",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f02f8aadb9de125",
            "route_table_id": "rtb-04b99885b92d42504",
            "subnet_id": "subnet-03358e65b76883950"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.database",
            "module.vpc_test.aws_subnet.database",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08587634fdee6c56d",
            "route_table_id": "rtb-0d7b97fcd8b07028b",
            "subnet_id": "subnet-0ae409a9f83361a70"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.private",
            "module.vpc_test.aws_subnet.private",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1cad1229fd18f29",
            "route_table_id": "rtb-0d7b97fcd8b07028b",
            "subnet_id": "subnet-02855b4e9323863df"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.private",
            "module.vpc_test.aws_subnet.private",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3cdd7c36f559a48",
            "route_table_id": "rtb-05034f685b6f2ba47",
            "subnet_id": "subnet-0a80f01572eb7257f"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.public",
            "module.vpc_test.aws_subnet.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5e719665d40849",
            "route_table_id": "rtb-05034f685b6f2ba47",
            "subnet_id": "subnet-0b067b77ae64c417d"
          },
          "dependencies": [
            "module.vpc_test.aws_route_table.public",
            "module.vpc_test.aws_subnet.public",
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-00232842a7c9ae0ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00232842a7c9ae0ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-database-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-database-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-03358e65b76883950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03358e65b76883950",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-database-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-database-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-0ae409a9f83361a70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae409a9f83361a70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-private-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-private-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-02855b4e9323863df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02855b4e9323863df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-private-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-private-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-0a80f01572eb7257f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80f01572eb7257f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-public-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-public-us-east-1a",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:subnet/subnet-0b067b77ae64c417d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b067b77ae64c417d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397962979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev-public-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev-public-us-east-1b",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397962979:vpc/vpc-0cc672a9197c56d1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ef6f8522ecd5831",
            "default_route_table_id": "rtb-0a5fe7dea3f25b71c",
            "default_security_group_id": "sg-0cc20711258eb0f4e",
            "dhcp_options_id": "dopt-05d4f400ecfec5dd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc672a9197c56d1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5fe7dea3f25b71c",
            "owner_id": "767397962979",
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09eb867312dd05ffb",
            "peer_owner_id": "767397962979",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ce4497cc4bc1c100",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-dev",
              "Project": "expense",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cc672a9197c56d1f"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main",
            "module.vpc_test.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}